# qtaria

./: .gitignore
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtaria.pro
src/core/handlers/: downloaderinterface.h
src/core/handlers/aria2/: ariahandler.cpp  ariahandler.h
src/core/handlers/curl/: curlhandlers.cpp  curlhandlers.h
src/core/handlers/qtweb/: downloadjob.cpp  downloadjob.h  qtwebhandler.cpp  qtwebhandler.h
src/core/managers/sessionmanager/: sessionmanager.cpp  sessionmanager.h
src/core/managers/uimanager/: listwidget.cpp  listwidget.h  uielementgroup.cpp  uielementgroup.h
